// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expensesSummary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    2256
     
    expenses
     totalling 
    $256.56
  </h1>
</div>
`;

exports[`should correctly render expensesSummary with one expense 1`] = `
<div>
  <h1>
    Viewing 
    15
     
    expenses
     totalling 
    $4.57
  </h1>
</div>
`;
